--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php-version: ['7.2', '7.3', '7.4', '8.0']
+        php-version: ['7.2', '7.3', '7.4', '8.0', '8.1']
         include:
           - php-version: '7.2'
             composer-flags: '--prefer-stable --prefer-lowest'
@@ -35,7 +35,7 @@ jobs:
       - name: Install dependencies
         run: composer update ${{ matrix.composer-flags }} --prefer-dist --no-interaction
       - name: PHPStan
-        if: ${{ matrix.php-version == '8.0' }}
+        if: ${{ matrix.php-version == '8.1' }}
         run: composer phpstan-all
       - name: Run tests
         run: composer phpunit
